# outlook-mcp

./: CLAUDE.md  README.md  pyproject.toml
docs/: workflow.md
docs/design/outlook-mcp/: architecture.md  detailed-design.md
outlook_mcp/: outlook.py  server.py
